--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -18,7 +18,6 @@ time, mark, audio, video, input {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font-weight: normal;
   vertical-align: baseline;
 }
@@ -54,7 +53,7 @@ a {
   -webkit-backface-visibility: hidden;
 }
 
-li {
+ul,li {
   list-style: none;
 }
 
